[metadata]
name = pyrdp
# TODO automate this with version = attr: my_package.VERSION
version = 1.1.1.dev0
description = Remote Desktop Protocol (RDP) Monster-in-the-Middle tool and Python library
long_description = file: README.md, CHANGELOG.adoc, LICENSE
license = GPLv3 or later
keywords = RDP, MITM, interception, attack, pentest, honeypots
author = Émilio Gonzalez, Francis Labelle, Olivier Bilodeau, Alexandre Beaulieu
author_email = obilodeau@gosecure.net
url = https://github.com/GoSecure/pyrdp

[options]
include_package_data = True
packages = find:
install_requires =
    'appdirs>=1,<2',
    'cryptography>=3.3.2,<37',
    'names>=0,<1',
    'progressbar2>=3.20,<5',
    'pyasn1>=0,<1',
    'pycryptodome>=3.5,<4',
    'pyopenssl>=19,<22',
    'pytz',
    'rsa>=4,<5',
    'scapy>=2.4,<3',
    'service_identity>=18',
    'twisted>=18'

[options.package_data]
* = *.default.ini
pyrdp = mitm/crawler_config/*.txt

[options.entry_points]
console_scripts = 
        'bin/pyrdp-clonecert.py',
        'bin/pyrdp-mitm.py',
        'bin/pyrdp-player.py',
        'bin/pyrdp-convert.py',
    ],

[options.extras_require]
full = 'wheel>=0.34.2',
       'av>=8,<9',
       'PySide2>=5.12,<6',
       'qimage2ndarray>=1.6,<2',
       'py-notifier>=0.3.0',
       'win10toast>=0.9;platform_system=="Windows"',